--- a/AllLambdaFunctions/MyTaskReminder_RemoveEvent.yaml
+++ b/AllLambdaFunctions/MyTaskReminder_RemoveEvent.yaml
@@ -1,37 +1,36 @@
-AWSTemplateFormatVersion: '2010-09-09'
-Transform: AWS::Serverless-2016-10-31
-Description: An AWS Serverless Specification template describing your function.
-Resources:
-  MyTaskReminderRemoveEvent:
-    Type: AWS::Serverless::Function
-    Properties:
-      CodeUri: .
-      Description: ''
-      MemorySize: 128
-      Timeout: 3
-      Handler: lambda_function.lambda_handler
-      Runtime: python3.11
-      Architectures:
-        - x86_64
-      EventInvokeConfig:
-        MaximumEventAgeInSeconds: 21600
-        MaximumRetryAttempts: 2
-      EphemeralStorage:
-        Size: 512
-      Events:
-        Api1:
-          Type: Api
-          Properties:
-            Path: /
-            Method: DELETE
-      RuntimeManagementConfig:
-        UpdateRuntimeOn: Auto
-      SnapStart:
-        ApplyOn: None
-      PackageType: Zip
-      Policies:
-        Statement:
-          - Effect: Allow
-            Action:
-              - '*'
-            Resource: '*'
+import json
+import boto3
+
+# Khởi tạo kết nối đến DynamoDB
+dynamodb = boto3.resource('dynamodb')
+table_name = 'MyTaskReminder_EventData'
+table = dynamodb.Table(table_name)
+
+def lambda_handler(event, context):
+    try:      
+        # Lấy EventID từ dữ liệu sự kiện
+        event_id = event['EventID']
+
+        # Kiểm tra xem EventID đã được cung cấp
+        if not event_id:
+            return {
+                'statusCode': 400,
+                'body': json.dumps('Missing EventID')
+            }
+
+        # Xóa sự kiện từ DynamoDB
+        response = table.delete_item(
+            Key={
+                'EventID': event_id
+            }
+        )
+
+        return {
+            'statusCode': 200,
+            'body': json.dumps('Sự kiện đã được xóa khỏi cơ sở dữ liệu thành công')
+        }
+    except Exception as e:
+        return {
+            'statusCode': 500,
+            'body': json.dumps('Đã xảy ra lỗi: {}'.format(str(e)))
+        }
