--- a/AllLambdaFunctions/Urgent-ImportantNotification.yaml
+++ b/AllLambdaFunctions/Urgent-ImportantNotification.yaml
@@ -1,54 +1,76 @@
-AWSTemplateFormatVersion: '2010-09-09'
-Transform: AWS::Serverless-2016-10-31
-Description: An AWS Serverless Specification template describing your function.
-Resources:
-  UrgentImportantNotification:
-    Type: AWS::Serverless::Function
-    Properties:
-      CodeUri: .
-      Description: ''
-      MemorySize: 128
-      Timeout: 3
-      Handler: lambda_function.lambda_handler
-      Runtime: python3.11
-      Architectures:
-        - x86_64
-      EventInvokeConfig:
-        MaximumEventAgeInSeconds: 21600
-        MaximumRetryAttempts: 2
-        DestinationConfig:
-          OnFailure:
-            Destination: arn:aws:sns:ap-southeast-1:226719017722:MyTaskReminderNotification
-            Type: SNS
-      EphemeralStorage:
-        Size: 512
-      Events:
-        DynamoDB1:
-          Type: DynamoDB
-          Properties:
-            Stream:
-              Fn::GetAtt:
-                - Table1
-                - StreamArn
-            StartingPosition: LATEST
-            BatchSize: 100
-      RuntimeManagementConfig:
-        UpdateRuntimeOn: Auto
-      SnapStart:
-        ApplyOn: None
-      PackageType: Zip
-      Role: arn:aws:iam::226719017722:role/service-role/Notification-role-m4t2fscu
-  Table1:
-    Type: AWS::DynamoDB::Table
-    Properties:
-      AttributeDefinitions:
-        - AttributeName: id
-          AttributeType: S
-      KeySchema:
-        - AttributeName: id
-          KeyType: HASH
-      ProvisionedThroughput:
-        ReadCapacityUnits: 5
-        WriteCapacityUnits: 5
-      StreamSpecification:
-        StreamViewType: NEW_IMAGE
+import boto3
+import json
+import random
+from datetime import datetime, timedelta
+
+# Khởi tạo kết nối đến DynamoDB
+dynamodb = boto3.client('dynamodb')
+
+# Khởi tạo kết nối đến Cognito
+cognito = boto3.client('cognito-idp', region_name='ap-southeast-1')
+
+# Khởi tạo kết nối đến SNS
+sns_client = boto3.client('sns', region_name='ap-southeast-1')
+
+# Biến môi trường
+# USER_POOL_ID = 'MyTaskReminder-UserData'
+USER_POOL_ID = 'ap-southeast-1_eJfA6tF52'
+TOPIC_ARN = 'arn:aws:sns:ap-southeast-1:226719017722:MyTaskReminderNotification'
+
+def get_user_name(user_id):
+    try:
+        response = cognito.admin_get_user(
+            UserPoolId=USER_POOL_ID,
+            Username=user_id
+        )
+        for attr in response['UserAttributes']:
+            if attr['Name'] == 'email':
+                return attr['Value'], ""
+        return None, response
+    except Exception as e:
+        print(f"Error getting user name: {str(e)}")
+        return None, f"Error getting user name: {str(e)}"
+
+def send_notification(user_name, EventDate, message):
+    # Tính toán thời gian cần gửi thông báo (trước 5 tiếng)
+    send_time = EventDate - timedelta(hours=5)
+
+    try:
+        sns_client.publish(
+            TopicArn=TOPIC_ARN,
+            Message=message,
+            MessageAttributes={
+                'ScheduledTime': {
+                    'DataType': 'String',
+                    'StringValue': send_time.strftime('%B %d, %Y')
+                }
+            }
+        )
+        print(f"Notification sent to {user_name}")
+    except Exception as e:
+        print(f"Error sending notification: {str(e)}")
+
+def lambda_handler(event, context):
+    user_id = event['UserId']
+    user_name, err = get_user_name(user_id)
+    if user_name is None:
+        return {
+            'statusCode': 500,
+            'msg': json.dumps(str(err))
+        }
+    
+    selected_datetime_str = event['EventDate']  # Ngày và giờ được chọn bởi người dùng
+    selected_datetime = datetime.strptime(selected_datetime_str, '%B %d, %Y')
+
+    message = random.choice([
+        f"🚀 Hey there! It's time to tackle Task. Stay focused and get them done!",
+        f"🚀 Don't procrastinate! Task needs your attention now. Let's go!",
+        f"🚀 Time is ticking! Prioritize Task for maximum productivity."
+    ])
+
+    send_notification(user_name, selected_datetime, message)
+
+    return {
+        'statusCode': 200,
+        'body': json.dumps('Thông báo đã được đặt lịch gửi thành công.')
+    }
